--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body, html {
-    margin: 0; padding: 0; height: 100%; overflow: hidden;
+    margin: 0; padding: 0; height: 100%; overflow: hidden; background: black;
 }
 
 #content {
@@ -8,8 +8,10 @@ body, html {
 
 #myApp {
     position: absolute;
+    background: black;
 }
 #online {
+    background: black;
     height: 100%;
     width: 100%;
     position: relative;
@@ -20,6 +22,7 @@ body, html {
 }
 
 #online iframe {
+    background: black;
     width: 100%;
     height: 100%;
 }
